# localization-for-starl

./: README.md
matlab/: Robot.m  convert_to_video.m  main.m  plot_after_running.m
matlab/callback_functions/: colorImageCollectionCallback.m  depthImageCollectionCallback.m
matlab/helper_functions/: check_incoming.m  create_camera_frame.m  establish_boundaries.m  findBots.m  findDepth.m  findRadiusRange.m  findYaw.m  find_crossings.m  find_robots.m  getMMCoord.m  getPixelCoord.m  parse_input.m  plot_bots.m  read_all_camera_images.m  read_all_kinect_images.m  server_pack_robots.m  trackBots.m  track_bots.m  verify_kinects_present.m
matlab/inputs/: robot_list.txt
matlab/setup_functions/: calibrate_kinect_settings.m
minnowboard/minnowBoardSetup/: CMakeLists.txt  README.txt  cameraParser.cpp  kinect_setup.bash  libfreenect2_setup.bash  makefile
minnowboard/minnowBoardSetup/camera_parser/: CMakeLists.txt  package.xml
minnowboard/minnowBoardSetup/camera_parser/src/: cameraParser.cpp
